<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home_bottommenu">
    </item>

    <item
        android:id="@+id/euro"
        android:icon="@drawable/euro"
        android:title="@string/euro_bottommenu">

    </item>
    <item
        android:id="@+id/usd"
        android:icon="@drawable/usd"
        android:title="@string/usd_bottommenu">

    </item>
    <item
        android:id="@+id/sterlin"
        android:icon="@drawable/sterlin"
        android:title="@string/sterlin_bottommenu">

    </item>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/settings_bottommenu">

    </item>
</menu>